# ChatbotChecadorVeracidade

./: .gitignore  LICENSE  README.md  main.py  package-lock.json  pyproject.toml
backend/: api.py
frontend/: Procfile  components.json  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/apps/web/: package.json  tsconfig.json
frontend/apps/web/src/: App.js  App.tsx  main.js
frontend/apps/web/src/components/: theme-provider.js
frontend/src/: App.tsx
frontend/src/components/: ChatArgos.tsx  ChatDFrui.tsx  IframePage.tsx  MyBot.tsx  MyChatBot.tsx  RelatorioPage.tsx  RiskAnalysisCard.tsx  chatbackup.tsx  endpoints.tsx
frontend/src/styles/: chatbot.css
web-site/: index.html  package-lock.json  package.json
web-site/projeto-md/: aurora_design_analysis.md
web-site/src/: App.tsx  index.css
web-site/src/components/: ComoFunciona.tsx  Comunidade.tsx  Footer.tsx  Header.tsx  Hero.tsx  Privacidade.tsx  ReportarCategorias.tsx  Stats.tsx
