[project]
name = "chatbotchecadorveracidade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.1",
    "google-genai>=1.75.0",
    "langchain>=1.2.18",
    "langchain-core>=1.3.3",
    "langchain-google-genai>=4.2.2",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.46.0",
]
